--- a/demo/skeleton/template/page/blocks/image-left.html.twig
+++ b/demo/skeleton/template/page/blocks/image-left.html.twig
@@ -9,7 +9,7 @@
 
     <div class="col-md-6 col-xl-5 offset-xl-1">
         {{ block('tags') }}
-        {{ block('summary') }}
+        {{ block('description') }}
     </div>
 {% endblock widget_image %}
 
