--- a/demo/skeleton/template/page/blocks/image-right.html.twig
+++ b/demo/skeleton/template/page/blocks/image-right.html.twig
@@ -7,7 +7,7 @@
     </div>
     <div class="col-md-6 col-xl-5 order-md-1">
         {{ block('tags') }}
-        {{ block('summary') }}
+        {{ block('description') }}
     </div>
 {% endblock widget_image %}
 
