--- a/demo/skeleton/template/page/blocks/card.html.twig
+++ b/demo/skeleton/template/page/blocks/card.html.twig
@@ -1,52 +1,21 @@
 {% extends '@EMSCH/template/page/blocks/abstract-block.html.twig' %}
 
+{% block image %}
+    {{ block('image', "@EMSCH/template/page/card/#{target.contentType}.html.twig") }}
+{% endblock image %}
 
 {% block tags %}
-    {% for tag in target.source.categories|default([]) %}
-        {% set category = tag|emsch_get|default(false) %}
-        {% if category and attribute(category.source, locale).title|default(false) %}
-            <div class="tag">{{ attribute(category.source, locale).title }}</div>
-        {% endif %}
-    {% endfor %}
+    {{ block('tags', "@EMSCH/template/page/card/#{target.contentType}.html.twig") }}
 {% endblock tags %}
 
-{% block summary %}
-    {% if attribute(target.source, locale).title|default(false) %}
-        <h3 class="h2 news-heading">{{ attribute(target.source, locale).title }}</h3>
-    {% endif %}
-    {{ attribute(target.source, locale).summary|default('')|emsch_routing }}
-{% endblock summary %}
-
-
-{% block image %}
-    {% if attribute(target.source, locale).image|default(false) %}
-        <img class="news-image img-fluid rounded mx-auto"
-             data-src="{{ ems_asset_path(attribute(target.source, locale).image, {
-                 _config_type: 'image',
-                 _width: 490,
-                 _height: 300,
-                 _quality: 90,
-             }) }}"
-             src="{{ ems_asset_path(attribute(target.source, locale).image, {
-                 _config_type: 'image',
-                 _width: 490,
-                 _height: 300,
-                 _quality: 90,
-             }) }}"
-             alt="490x300"
-             data-holder-rendered="true">
-    {% endif %}
-{% endblock image %}
+{% block description %}
+    {{ block('description', "@EMSCH/template/page/card/#{target.contentType}.html.twig") }}
+{% endblock description %}
 
 {% block widget %}
     {% trans_default_domain trans_default_domain %}
     {% set target = item.object.target|emsch_get|default(false) %}
     {% if target %}
-        {{ block('summary') }}
-        <div class="mt-5">
-            <a href="{{ path('emsch_path', {path: attribute(pathsByUids, target.source.menu).path|default('')}) }}" class="btn btn-outline-primary text-uppercase">
-                {{ attribute(target.source, locale).subtitle|default(attribute(target.source, locale).title) }}
-            </a>
-        </div>
+        {{ block('card', "@EMSCH/template/page/card/#{target.contentType}.html.twig") }}
     {%  endif %}
 {% endblock widget %}
