fix: no link in menu if page not published

--- a/demo/skeleton/template/fragments/footer.html.twig
+++ b/demo/skeleton/template/fragments/footer.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block request %}
-    {% for section in structure.children %}
+    {% for section in structure.children|filter(p => p.id in pages) %}
         {{ block('item') }}
     {% endfor %}
 {% endblock request %}
