--- a/demo/skeleton/template/page/blocks/grid-with-hr.html.twig
+++ b/demo/skeleton/template/page/blocks/grid-with-hr.html.twig
@@ -1,13 +1,15 @@
 {% extends '@EMSCH/template/page/blocks/abstract-block.html.twig' %}
 
 {% block body %}
-    <section class="py-5 py-lg-8">
-        <div class="row">
-            <div class="col-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
-                {{ block('children') }}
+    <div class="container-fluid container-lg">
+        <section class="py-5 py-lg-8">
+            <div class="row">
+                <div class="col-12 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
+                    {{ block('children') }}
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 {% endblock body %}
 
 {% block child %}
