fix: error page

--- a/demo/skeleton/template/error/error.html.twig
+++ b/demo/skeleton/template/error/error.html.twig
@@ -1,12 +1,9 @@
-{% extends '@EMSCH/template/base/bootstrap.html.twig' %}
+{% extends '@EMSCH/template/view/language_select.html.twig' %}
 {% trans_default_domain trans_default_domain %}
 
 {% set type = (statusCode/1) < 500 ? 'warning' : 'danger' %}
 
-{% block canonical %}{% endblock %}
-
-
-{% block title %}{{ 'error.title'|trans }}{% endblock %}
+{% block title %}Error{% endblock %}
 
 {% block main %}
     <main role="main" class="container mt-5 mb-5" id="main-content">
@@ -15,19 +12,19 @@
                 <div class="alert alert-{{ type }}" role="alert">
                     <h1>{% block icon %}<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {% endblock %}{{ block('title') }}</h1>
                     <p>
-                        {% block description %}{{ 'error.description'|trans }}{% endblock %}
+                        {% block description %}Error{% endblock %}
                     </p>
-                    <form class="search-form">
-                        <div class="input-group">
-                            <input type="text" name="search" class="form-control" placeholder="{{ 'action.search'|trans|e('html_attr') }}" aria-label="{{ 'action.search'|trans|e('html_attr') }}" name="q">
-                            <div class="input-group-append">
-                                <button type="submit" name="submit" class="btn btn-{{ type }} btn-flat">
-                                    <i class="fa fa-search"></i>
-                                    {{ 'action.search'|trans }}
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+{#                    <form class="search-form">#}
+{#                        <div class="input-group">#}
+{#                            <input type="text" name="search" class="form-control" placeholder="{{ 'action.search'|trans|e('html_attr') }}" aria-label="{{ 'action.search'|trans|e('html_attr') }}" name="q">#}
+{#                            <div class="input-group-append">#}
+{#                                <button type="submit" name="submit" class="btn btn-{{ type }} btn-flat">#}
+{#                                    <i class="fa fa-search"></i>#}
+{#                                    {{ 'action.search'|trans }}#}
+{#                                </button>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </form>#}
                 </div>
             </div>
         </div>
