--- a/demo/skeleton/template/error/error404.html.twig
+++ b/demo/skeleton/template/error/error404.html.twig
@@ -1,8 +1,6 @@
 {% extends '@EMSCH/template/error/error.html.twig' %}
 {% trans_default_domain trans_default_domain %}
 
-{% block canonical %}{% endblock %}
-
-{% block title %}{{ 'error.404.title'|trans }}{% endblock %}
+{% block title %}Page not found{% endblock %}
 {% block icon %}<i class="fa fa-times-circle" aria-hidden="true"></i> {% endblock %}
-{% block description %}{{ 'error.404.description'|trans }}{% endblock %}
+{% block description %}Page not found{% endblock %}
