--- a/demo/skeleton/template/view/language_select.html.twig
+++ b/demo/skeleton/template/view/language_select.html.twig
@@ -3,7 +3,7 @@
 
 {% block body_attr %}id="languages-page"{% endblock %}
 
-{% block metatitle %}Select language{% endblock %}
+{% block metatitle %}{% block title %}Select language{% endblock %}{% endblock %}
 
 {%- block body -%}
     {% apply spaceless %}
@@ -13,6 +13,7 @@
                     <div class="d-block brand-logo mb-5">
                         <img src="{{ asset("img/logos/full-logo.svg", 'emsch') }}" width="280" class="d-inline-block align-middle" alt="{{ 'site.short_name'|trans }}">
                     </div>
+                    {% block main %}{% endblock main %}
                     <div class="choice-btn">
                         {% for locale in locales %}
                             <div class="d-inline-block text-uppercase p-3" lang="{{ locale }}">
