--- a/EMS/core-bundle/assets/css/app.less
+++ b/EMS/core-bundle/assets/css/app.less
@@ -1,1 +1,11 @@
 @import "~admin-lte/build/less/AdminLTE";
+
+.select2-container--default,
+.select2-selection {
+  &.select2-container--focus,
+  &:focus,
+  &:active {
+    .form-control-focus(@light-blue);
+    box-shadow: none !important;
+  }
+}
