fix: requester and task manager can delete tasks
If the task manager deletes a task, we send an email to the requester

--- a/EMS/core-bundle/src/Resources/views/revision/task/mail.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/mail.twig
@@ -13,6 +13,7 @@
 {% block mail_deleted %}
      {{ block('_printHello') }}
     <p>The task "{{ task.title }}" has been deleted.</p>
+    {% if task.createdBy != app.user.userIdentifier %}<p>By {{ app.user.displayName }}</p>{% endif %}
     {{ block('_printInfo') }}
 {% endblock %}
 
