--- a/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
@@ -194,11 +194,13 @@
         {%- endif -%}
         <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
-    <div class="pull-right">
-        <button type="button" id="btn-task-delete"
-                data-url="{{ path('ems_core_task_ajax_delete', {'revisionId': revisionId, 'taskId': task.id}) }}"
-                class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> {{ 'task.delete.submit'|trans }}</button>
-    </div>
+    {% if task.createdBy == app.user.userIdentifier or is_granted('ROLE_TASK_MANAGER') %}
+        <div class="pull-right">
+            <button type="button" id="btn-task-delete"
+                    data-url="{{ path('ems_core_task_ajax_delete', {'revisionId': revisionId, 'taskId': task.id}) }}"
+                    class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> {{ 'task.delete.submit'|trans }}</button>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block taskForm %}
