--- a/EMS/core-bundle/src/Resources/views/data/abstract-revision.html.twig
+++ b/EMS/core-bundle/src/Resources/views/data/abstract-revision.html.twig
@@ -2,15 +2,11 @@
 {% trans_default_domain 'emsco-twigs' %}
 
 {% block title %}
-    {%- if revision.labelField -%}
-        {{ 'views.data.edit-revision-html.title'|trans({'%content-type%': revision.contentType.singularName, '%revision%': revision.labelField}) }}
-    {%- elseif revision.contentType.labelField and attribute(revision.rawData, revision.contentType.labelField) is defined -%}
-        {{ 'views.data.edit-revision-html.title'|trans({'%content-type%': revision.contentType.singularName, '%revision%': attribute(revision.rawData, revision.contentType.labelField) }) }}
-    {%- elseif revision.ouuid -%}
-        {{ 'views.data.edit-revision-html.title'|trans({'%content-type%': revision.contentType.singularName, '%revision%': revision.ouuid }) }}
-    {%- else -%}
+    {% if revision.ouuid %}
+        {{ 'views.data.edit-revision-html.title'|trans({'%content-type%': revision.contentType.singularName, '%revision%': revision|emsco_display }) }}
+    {% else %}
         {{ 'views.data.edit-revision-html.new-draft-title'|trans({'%content-type%': revision.contentType.singularName }) }}
-    {%- endif -%}
+    {% endif %}
 {% endblock %}
 
 {% block pagetitle %}{{ block('title') }}{% endblock %}
