feat(emsco/display): on legacy search overview

--- a/EMS/core-bundle/src/Resources/views/elasticsearch/search.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elasticsearch/search.html.twig
@@ -42,12 +42,9 @@
 						  	{{ attribute(types, result.contentType).singularName }} |
 						{% endif %}
 
-					  	{% set contentType=attribute(types, result.contentType) %}
-						{% if (contentType.labelField and attribute(result.source, contentType.labelField)  is defined ) %}
-							{{ attribute(result.source, contentType.labelField) }}{% if is_super() %} <small>({{ result.id }})</small>{% endif %}
-						{% else %}
-							{{ result.id }}
-						{% endif %}
+						{% set resultLabel = result|emsco_display %}
+						{{ resultLabel }}
+						{% if resultLabel != result.id or is_super()  %}<small>({{ result.id }})</small>{% endif %}
 			  		</span>
 			  	{% else %}
 				  	<i class="fa fa-question"></i>
