fix(emsco/emsLink): UI display emsLinks in modal or small screens

--- a/EMS/core-bundle/assets/css/_ems.scss
+++ b/EMS/core-bundle/assets/css/_ems.scss
@@ -158,3 +158,12 @@ div.core-js-progress {
     margin-bottom: 0;
   }
 }
+
+.ems-data-link {
+  display: flex;
+  align-items: baseline;
+  white-space: normal;
+  text-align: left;
+
+  & i { padding-right: 10px;}
+}
