fix(emsco/wysiwyg): dashboard modal object/file select emsId (#416)

--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.html.twig
@@ -31,7 +31,7 @@
 {%- block mediaLibraryFileRow -%}
     {% apply spaceless %}
         <li>
-            <div><a href="{{ url }}" download="{{ media.file.filename }}">{{ media.file.filename }}</a></div>
+            <div><a href="{{ url }}" download="{{ media.file.filename }}" data-ems-id="{{ media.emsId }}">{{ media.file.filename }}</a></div>
             <div>{{ media.file.mimetype|trans({}, 'emsco-mimetypes') }}</div>
             <div class="text-right">{{ media.file.filesize|format_bytes }}</div>
         </li>
