fix(emsco/emsLink): css width flex -> inline-flex

--- a/EMS/core-bundle/assets/css/_ems.scss
+++ b/EMS/core-bundle/assets/css/_ems.scss
@@ -160,7 +160,7 @@ div.core-js-progress {
 }
 
 .ems-data-link {
-  display: flex;
+  display: inline-flex;
   align-items: baseline;
   white-space: normal;
   text-align: left;
