--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -314,7 +314,12 @@
 
 {% block EMS_CoreBundle_Form_DataField_HolderFieldType %}
     {% for child in dataField.getChildren|filter(c => false == c.fieldType.deleted) %}
-        {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path) }}
+        <div class="{{ child.fieldType.displayOptions.class|default('col-md-12') }}">
+            {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path) }}
+        </div>
+        {% if child.fieldType.displayOptions.lastOfRow|default(false) %}
+            <div class="clearfix"></div>
+        {% endif %}
     {% endfor %}
 {% endblock EMS_CoreBundle_Form_DataField_HolderFieldType %}
 
